--- a/tools/compose/nginx-proxy-manager.yml
+++ b/tools/compose/nginx-proxy-manager.yml
@@ -49,7 +49,7 @@ services:
       PRE_REQUEST_HEALTH_CHECK: true
 
   app:
-    image: amruthpillai/reactive-resume:latest
+    image: shibinmak23/resume:1.0
     restart: unless-stopped
     depends_on:
       - postgres
